# ml-shogi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Untitled.ipynb
ml/: loss.py  main.py  metrics.py  trainer.py
ml/dataset/: common.py  csa.py  csa_tfrecord.py  features.py  kifu.py  sfen.py
ml/layer/: reducer.py
ml/model/: cnn.py  mish.py  mobilenet.py  resnet.py
ml/utils/: export_sfen.py  export_step.py  export_tfrecord.py  filter_csa.py  make_kifu_list.py
src/: neural_network.cpp  neural_network.h
test/: concat_test.cpp  model_test.cpp  saved_model_test.cpp  tf_lite_test.cpp
